Fix truncated text on the ListItem component

--- a/app/common/ListItem/ListItem.module.scss
+++ b/app/common/ListItem/ListItem.module.scss
@@ -12,10 +12,16 @@
 
   .info {
     padding: 28px;
+    min-width: 0;
+    z-index: 1;
+    position: relative;
 
     .title {
       font-variation-settings: "wght" 600;
       margin-bottom: 5px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .description {
